--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2.component.html
@@ -107,11 +107,12 @@
             <br>- ค่าใช้จ่ายอื่น
           </div>
           <div class="ten wide field"></div>
-          <div class="column" style="width: 20%;">
+          <div class="column" style="width: 20%;text-align: right">
             <br> {{ toCommaAndDecimal(body.allowanceCost) }}
             <br> {{ toCommaAndDecimal(body.rentCost) }}
             <br> {{ toCommaAndDecimal(body.travelCost) }}
             <br> {{ toCommaAndDecimal(body.otherCost) }}
+            <br>
           </div>
         </div>
         <br>
