--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/send-line-user/send-line-user.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/send-line-user/send-line-user.component.html
@@ -105,7 +105,7 @@
                 <div class="ui center aligned grid">
                     <div class="sixteen wide column">
                         <button type="submit" class="ui mini primary button">
-                            <i class="add icon"></i>
+                            <i class="save icon"></i>
                             สร้างกระดาษทำการคัดเลือกราย
                         </button>
                         <button type="button" class="ui mini button" routerLink="/add-external-data">
